# haskellbook

./: README.md  braindump.md
chapter1/: chapter1.txt
chapter10/: database.hs  exercises.hs  fibs.hs  rewritingUsingFolds.hs  understandingFolds.txt
chapter11/: asPatterns.hs  binaryTree.hs  cipher.hs  exercises.txt  huttonsRazor.hs  languageExercises.hs  phone.hs  programmers.hs  tooMany.hs  vehicles.hs
chapter12/: binaryTree.hs  eitherLib.hs  exercises.txt  instanceTest.hs  maybeLib.hs  onlyNatural.hs  stringProcessing.hs  unfolds.hs  validateTheWord.hs
chapter13/: Palindrome.hs  Person.hs  cipher.hs  exercises.txt
chapter13/hangman/: .gitignore  README.md  hangman.cabal
chapter13/hangman/src/: Main.hs
chapter13/hangman/tests/: tests.hs
chapter13/hello/: hello.cabal
chapter13/hello/exe/: Main.hs
chapter13/hello/src/: DogsRule.hs  Hello.hs
chapter14/: CoArbitrary.hs  Mytest.hs
chapter14/addition/: Addition.hs  addition.cabal
chapter14/exercises/: LICENSE  exercises.cabal
chapter14/exercises/src/: Cipher.hs  Failure.hs  FoolGen.hs  Idempotence.hs  UsingQuickCheck.hs  WordNumber.hs  WordNumberTest.hs
chapter14/morse/: README.md  morse.cabal
chapter14/morse/src/: Main.hs  Morse.hs
chapter14/morse/tests/: tests.hs
chapter15/: Bull.hs  Madness.hs  Optional.hs
chapter15/orphanInstance/: Listy.hi  Listy.hs
chapter2/: chapter2.txt  exercises.hs  exercises12.hs  learn.hs  test.hs  waxOn.hs
chapter3/: execises.txt  exercises.hs  print3broken.hs  reverse.hs  test.hs
chapter4/: exercises.txt  moodModule.hs
chapter5/: arith3Broken.hs  determineTheType.hs  doesItCompile.hs  exercises.txt  sing.hs  test.hs  typeKwonDo.hs  writeFunction.hs
chapter6/: derivingInstances.hs  eqInstances.hs  exercises.txt  matchTheType.hs  numberish.hs  test.hs  typeCheck.hs  typeKwonDo.hs
chapter7/: arith2.hs  arith4.hs  artfulDodgy.hs  casePractice.hs  exercises.hs  guardDuty.hs  lambda.hs  varietyPack.hs
chapter8/: dividedBy.hs  exercises.hs  exercises.txt  mc91.hs
chapter9/: cipher.hs  enumFromTo.hs  exercises.hs  fearfulSymmetry.hs  filtering.hs  headTail.hs  poemLines.hs  zipping.hs
