name:                exercises
version:             0.1.0.0
homepage:            https://github.com/rodideboer/haskellbook/chapter14/exercises#readme
license:             BSD3
license-file:        LICENSE
author:              Rodi de Boer
maintainer:          rodideboer@gmail.com
copyright:           2017 Rodi de Boer
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     WordNumber
                     , WordNumberTest
                     , UsingQuickCheck
  hs-source-dirs:      src
  ghc-options:         -Wall -fwarn-tabs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , QuickCheck
