name:                morse
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rodideboer/haskellbook/chapter14/morse#readme
license:             BSD3
license-file:        LICENSE
author:              Rodi de Boer
maintainer:          rodideboer@gmail.com
copyright:           2017 Rodi de Boer
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fwarn-tabs
  exposed-modules:     Morse
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , QuickCheck
  default-language:    Haskell2010

executable morse
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base
                     , morse
                     , QuickCheck
                     , containers
  default-language:    Haskell2010

test-suite morse-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             tests.hs
  build-depends:       base
                     , morse
                     , containers
                     , QuickCheck
  ghc-options:         -Wall -fno-warn-orphans
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rodideboer/haskellbook/chapter14/morse
